--- a/settings.html
+++ b/settings.html
@@ -1,52 +1,60 @@
-{% extends '__layout__.html' %}
-{% block title %}Settings{% endblock %}
-{% block head %}
-<link href="/static/css/settings.css" rel="stylesheet"/> <!-- Its just easier to resuse this-->
-{% endblock %}
-{% block content %}
-<div id="main">
-    <div class="settings-container">
-        <h1>Account Settings</h1>
-        <div class="linebreak"></div>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <div>
-        {% for message in messages %}
-            <div class="alert border border-danger p-2 text-center messagealerts">
-                {{ message }}
-            </div>
-        {% endfor %}
+{% extends 'groups/admin_template.html' %}
+{% block page_content%}
+<h3>
+    Settings
+</h3>
+<form enctype="multipart/form-data" method="post" class="ms-2">
+    <div>
+        <h5 class="mb-1">Requires Approval</h5>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="approval-required" id="approval-required1" value="off"{%if group.settings.approval_required == False %}checked{%endif%}>
+            <label class="form-check-label" for="approval-required1">
+              Anyone can join
+            </label>
         </div>
-        {% endif %}
-        {% endwith %}
-        <div class="d-flex align-items-center mb-2">
-            <p style="width: fit-content;height: 100%;" class="me-auto">Username: <b>{{currentuser.username}}</b></p>
-            <a class="btn btn-primary btn-sm d-flex fw-bold text-decoration-none" href="/settings/update-username">Edit Username</a>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="approval-required" id="approval-required2" value="on"{%if group.settings.approval_required %}checked{%endif%}>
+            <label class="form-check-label" for="approval-required2">
+              Manual approval
+            </label>
         </div>
-        <div class="d-flex align-items-center mb-2">
-            <p style="width: fit-content;height: 100%;" class="me-auto">Password: <b>************</b></p>
-            <a class="btn btn-primary btn-sm d-flex fw-bold text-decoration-none" href="/settings/update-password">Edit Password</a>
-        </div>
-        <div class="d-flex align-items-center mb-2">
-            <p style="width: fit-content;height: 100%;" class="me-auto">Email: {% if LinkedEmailObj %}<b>{{HiddenEmail}}</b>{%if LinkedEmailObj.verified %}<span class="text-success"> Verified</span>{%else%}<span class="text-warning"> Unverified</span>{%endif%}{%else%}<b>No Email Linked</b>{%endif%}</p>
-            <a class="btn btn-primary btn-sm d-flex fw-bold text-decoration-none" href="/settings/update-email">{% if LinkedEmailObj %}Edit Email{%else%}Add email{%endif%}</a>
-        </div>
-        <div class="d-flex align-items-center mb-2">
-            <p style="width: fit-content;height: 100%;" class="me-auto">Authenticator App Authentication: {% if TOTPenabled: %}<b>Enabled</b>{% else %}<b>Disabled</b>{% endif %}</p>
-            {% if not TOTPenabled: %}<a href="/settings/enableTOTP" class="text-decoration-none"><button class="btn btn-success btn-sm d-flex fw-bold">Enable Authenticator</button></a>{% endif %}
-        </div>
-        <div class="d-flex align-items-center mb-2">
-            <p style="width: fit-content;height: 100%;" class="me-auto">Discord Account: {% if DiscordUserInfoObj != None: %}<img src="{{DiscordUserInfoObj.GetAvatarURL()}}" height="30px" class="border rounded-3" style="aspect-ratio: 1/1;"><b class="ms-2">{{DiscordUserInfoObj.Username}}#{{DiscordUserInfoObj.Discriminator}}</b><span> ({{DiscordUserInfoObj.UserId}})</span>{%else%}<b>Not Linked</b>{%endif%}</p>
-            {% if DiscordUserInfoObj == None: %}<a href="/settings/discord_link" class="text-decoration-none"><button class="btn btn-success btn-sm d-flex fw-bold">Link Discord</button></a>{%else%}<form action="/settings/unlink_discord" method="post"><input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/><button class="btn btn-danger btn-sm d-flex fw-bold">Unlink Discord</button></form>{% endif %}
-        </div>
-        <h5>Description</h5>
-        <form action="/settings/description" method="POST">
-            <textarea class="form-control" id="description" rows="3" maxlength="256" name="description" placeholder="Enter a description about yourself here... ( 256 chars max )">{{description}}</textarea>
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            <div class="d-flex justify-content-end">
-                <button type="submit" class="btn btn-primary mt-2">Save</button>
-            </div>
-        </form>
     </div>
-</div>
-{% endblock %}
+    <div class="mt-3">
+        <h5 class="mb-1">Entry Qualifications</h5>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="membership-required" id="membership-required"{%if group.settings.membership_required %}checked{%endif%}>
+            <label class="form-check-label" for="membership-required">
+                User must have Builders Club
+            </label>
+        </div>
+    </div>
+    <div class="mt-3">
+        <h5 class="mb-1">Miscellaneous</h5>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="declaration-allowed" id="declaration-allowed"{%if group.settings.enemies_allowed %}checked{%endif%}>
+            <label class="form-check-label" for="declaration-allowed">
+                Allow enemy declarations
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="funds-visible" id="funds-visible"{%if group.settings.funds_visible %}checked{%endif%}>
+            <label class="form-check-label" for="funds-visible">
+                Group funds are publicly visible
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="games-visible" id="games-visible"{%if group.settings.games_visible %}checked{%endif%}>
+            <label class="form-check-label" for="games-visible">
+                Group games are visible on the group home page
+            </label>
+        </div>
+    </div> 
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    <div class="mt-3">
+        <button type="submit" class="btn btn-primary" {%if group.owner_id != user.id %}disabled{%endif%}>Save</button>
+        {%if group.owner_id != user.id %}
+        <p class="text-secondary m-0 mt-1">Only the owner of the group can modify the group settings</p>
+        {%endif%}
+    </div>
+</form>
+{%endblock%}
